fix: footer display on safari

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -17,7 +17,7 @@
 }
 
 .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl-geocoder {
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
   margin-right: 1.5rem;
   padding: 0;
   font-family: 'Yoster-Island';
